# Arka

./: .containerignore  .gitignore  ArkaOS.colors  CHANGELOG.md  CLAUDE.md  Containerfile  HISTORY.md  LICENSE  PHASE3-FINDINGS.md  PHASE4-SANDBOX.md  README.md  VERSION  arka-layout.js  arka-plasma-firstrun  arkaos-firefox  arkaos-firstboot  arkaos-firstboot.service  arkaos-hyprland-config  arkaos-settings  arkaos-sway-config  arkaos-waybar-config  arkaos-waybar-style  config.toml  hyprlock-config  sway-autostart  swaylock-config
arka-design-system/: README.md
arka-icons/: index.theme
arka-shell/: Cargo.toml
arka-shell/arka-bar/: Cargo.toml
arka-shell/arka-bar/src/: main.rs
arka-shell/arka-bluetooth/: Cargo.toml
arka-shell/arka-bluetooth/src/: main.rs
arka-shell/arka-capsule/: Cargo.toml
arka-shell/arka-capsule/src/: main.rs
arka-shell/arka-dashboard/: Cargo.toml
arka-shell/arka-dashboard/src/: dbus.rs  main.rs  state.rs  style.css  ui.rs
arka-shell/arka-dock/: Cargo.toml
arka-shell/arka-dock/src/: main.rs
arka-shell/arka-hotkeys/: Cargo.toml
arka-shell/arka-hotkeys/src/: main.rs
arka-shell/arka-launcher/: Cargo.toml
arka-shell/arka-launcher/src/: apps.rs  main.rs
arka-shell/arka-perms/: Cargo.toml
arka-shell/arka-perms/src/: main.rs
arka-shell/arka-settings/: Cargo.toml
arka-shell/arka-settings/src/: main.rs
arka-shell/arka-shell-common/: Cargo.toml
arka-shell/arka-shell-common/src/: dns.rs  lib.rs  sandbox.rs  theme.rs  window.rs
arka-shell/arka-sound/: Cargo.toml
arka-shell/arka-sound/src/: main.rs
arka-shell/arka-update/: Cargo.toml
arka-shell/arka-update/src/: main.rs
arka-shell/arka-welcome/: Cargo.toml
arka-shell/arka-welcome/src/: main.rs
arka-shell/arka-wifi/: Cargo.toml
arka-shell/arka-wifi/src/: main.rs  net.rs
arkad/: Cargo.toml  arkad.service  arkad.toml  org.arka.arkad.conf  org.arka.arkad.service
arkad/src/: config.rs  dbus.rs  error.rs  log.rs  main.rs  score.rs  state.rs
arkad/src/enforcers/: dns.rs  hostname.rs  ipv6.rs  mac.rs  mod.rs  sandbox.rs
arkad/src/ipc/: interface.rs  mod.rs
desktop-files/: arka-bluetooth.desktop  arka-capsule.desktop  arka-dashboard.desktop  arka-hotkeys.desktop  arka-perms.desktop  arka-settings.desktop  arka-sound.desktop  arka-update.desktop  arka-wifi.desktop
docs/: ARCHITECTURE.md  BUILDING.md  DECISIONS.md  DP1-EXIT-CRITERIA.md  DP2.md  FIELD-NOTES.md  FUTURE-CONSIDERATIONS.md  INSTALLATION-ARCHITECTURE.md  README.md  (+3 more)
legacy/: Cargo.toml  README.md
legacy/arka-bar/: Cargo.toml
legacy/arka-bar/src/: main.rs
legacy/arka-dock/: Cargo.toml
legacy/arka-launcher/: Cargo.toml
legacy/arka-launcher/src/: apps.rs
(+7 files in other folders)
