[workspace]
members = ["arka-shell-common", "arka-bar", "arka-dashboard", "arka-launcher", "arka-wifi", "arka-update", "arka-hotkeys", "arka-capsule", "arka-perms", "arka-settings", "arka-welcome", "arka-sound", "arka-bluetooth"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
