[package]
name = "arkad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arkad"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
