[package]
name = "arka-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arka-dashboard"
path = "src/main.rs"

[dependencies]
arka-shell-common = { path = "../arka-shell-common", features = ["gtk"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
gtk4 = "0.9"
glib = "0.20"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
zbus = { version = "4", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
